<resources>

    <!-- main activity -->
    <string name="mainTitle">NASA IMAGERY DATABASE</string>
    <string name="app_name">BINGIFY</string>
    <string name="app_name_subtitle">Discover the amazing world of BING maps</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="email_error1">Please enter your email address</string>
    <string name="email_error2">Please enter a correct email address</string>
    <string name="wrong_email">Wrong email</string>

    <!-- Activity 1 -->
    <string name="toast1">You are now going to Activity 2</string>
    <string name="toast2">You are now going to Activity 3</string>
    <string name="latitude">LATITUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="activity1">Activity 1</string>
    <string name="alertTitle">Help</string>
    <string name="alertMsg">Please enter a latitude and longitude value and click the search button</string>
    <string name="ok">OK</string>
    <string name="snackText">\"Last Searched Coordinates: \"</string>
    <string name="coordinatesText">Enter Coordinates:</string>
    <string name="search">Search</string>
    <string name="randLocText">Generate Random Location</string>
    <string name="currLocText">Current Location</string>
    <string name="historyText">Search History</string>
    <string name="alert1">Alert</string>
    <string name="alertMsg1">This feature has not yet been implemented. Please try again later.</string>
    <string name="activity1Description">Enter a latitude and a longitude and click search location</string>
    <string name="activity1_toast">Enter a latitude and longitude</string>

    <!-- Activity 2 text -->
    <string name="helpDescription">You are currently viewing a map. Tap on the zoom in or out icons on the toolbar. Then enter a title to favorite this location.</string>
    <string name="okButton">OK</string>
    <string name="helpExtra">Click on the items in the list to view more details</string>
    <string name="activity2Title">Title</string>
    <string name="activity2Description">Description</string>
    <string name="activity2Hide">Hide</string>
    <string name="activity2_favoriteSnack">Your map location has been favorited</string>
    <string name="activity2_favoriteButton">Add To Favorites</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="activity2_favorites_list">Favorites List</string>
    <string name="activity2_coffee_list">Coffee Shop List</string>
    <string name="search_location">Search Location</string>
    <string name="view_map">View Map</string>
    <string name="browser_favorites">Browse Favorite Locations</string>
    <string name="move_left">You have moved left</string>
    <string name="move_right">You have moved right</string>
    <string name="move_top">You have moved top</string>
    <string name="move_bottom">You have moved bottom</string>
    <string name="coffee_warning">Coffee shop list is only available in USA at this time. </string>
    <string name="zoom_in">You have zoomed in. Zoom level is now </string>
    <string name="zoom_out">You have zoomed out. Zoom level is now </string>
    <string name="header_title">Activity 2 - View map</string>
    <string name="header_name">Name: Pak Leung</string>
    <string name="header_version">Version: 1</string>
    <string name="favorite">Favorite</string>
    <string name="cancel">Cancel</string>
    <string name="favorite_validation">Please enter a title.</string>
    <string name="home">Home</string>

    <!-- Activity 3 -->
    <string name="delete_this">Do you want to delete this location?</string>
    <string name="select_row">The selected row is:</string>
    <string name="dataB_id">"\nThe database id: "</string>
    <string name="yyes">Yes</string>
    <string name="nnoo">No</string>

    <string name="map_key" translatable="false">AIzaSyB8hWWmMuBRrR0gUlkBjRQI3p15s7gAMxo</string>
    <string name="deleteDB">All database deleted</string>
    <string name="reload">Database deleted and demo locations loaded</string>
    <string name="addDemo">Added demo locations to the database</string>
    <string name="total_locations">Total Locations:</string>
    <string name="advertisement">Your advertisement could be here.</string>

    <string name="activity3Select">"Select an item from the listview to view more details"</string>

</resources>
