<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/activityOne"
        android:icon="@drawable/search"
        android:title="@string/search_location"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:textColor="@color/colorText"/>

    <item android:id="@+id/activityTwo"
        android:icon="@drawable/globe"
        android:title="@string/view_map"
        android:orderInCategory="300"
        app:showAsAction="always"
        android:textColor="@color/colorText"/>

    <item android:id="@+id/activityThree"
        android:icon="@drawable/heart"
        android:title="@string/browser_favorites"
        android:orderInCategory="400"
        app:showAsAction="always"/>

</menu>