<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"

    android:gravity="center"
    android:background="@drawable/earth_mobile">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        android:paddingTop="60dp"
        android:paddingBottom="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name_subtitle"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/colorText"
            android:textColor="@color/colorText"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="#FFF" />

        <TextView
            android:paddingTop="30dp"
            android:id="@+id/darkModeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:text="Light Mode" />

        <Switch
            android:id="@+id/simpleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/activityButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Activity 1"
                android:layout_weight="1" />
            <Button
                android:id="@+id/activityButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Activity 2"
                android:layout_weight="1" />
            <Button
                android:id="@+id/activityButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Activity 3"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>